Pin pip version to 18.0 in travis tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ python:
 
 install:
   - pip install -e .
-  - pip --version
-  - pipenv install --dev --system
+  - pipenv install --dev
+  - pip install -U pip==9.0.1
+  - which pip
 
 script: pytest
