--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ python:
   - "2.7"
 
 install:
+  - pip install pip==18.0
   - pip install -e .
-  - pipenv install --dev
-  - pip install -U pip==9.0.1
-  - which pip
+  - export PIPENV_IGNORE_VIRTUALENVS=1 && pipenv install --dev
 
-script: pytest
+script: pipenv run pytest
