--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ python:
   - "2.7"
 
 install:
-  - pip install pip==18.0
+  - pip install -U pip
   - pip install -e .
-  - export PIPENV_IGNORE_VIRTUALENVS=1 && pipenv install --dev
+  - pipenv install --dev
 
-script: pipenv run pytest
+script: pytest
