--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,12 +1,10 @@
 engines:
   isort:
     enabled: true
-    channel: beta
   pep8:
     enabled: true
   pylint:
     enabled: true
-    channel: beta
     checks:
       import-error:
         enabled: false
@@ -22,8 +20,8 @@ exclude_patterns:
 - "**/__pycache__/"
 - "tests/"
 - "**/test_*"
-- "pipenv/patched/"
-- "pipenv/vendor/"
+- "**/patched/"
+- "**/vendor/"
 ratings:
   paths:
   - pipenv/**
