--- a/setup.cfg
+++ b/setup.cfg
@@ -29,3 +29,24 @@ known_first_party =
     pipenv
     tests
 ignore_trailing_comma=true
+
+[tool:pytest]
+addopts = -n auto -ra --cov --cov-report=
+testpaths = tests
+; Add vendor and patched in addition to the default list of ignored dirs
+norecursedirs = .* build dist CVS _darcs {arch} *.egg vendor patched news tasks docs tests/test_artifacts
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+
+[coverage:run]
+branch = 1
+omit =
+    **/test_*.py
+source = pipenv
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    raise NotImplementedError
+    return NotImplemented
