--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ known_first_party =
 ignore_trailing_comma=true
 
 [tool:pytest]
-addopts = -n auto -ra --cov-config=setup.cfg --cov --cov-report=
+addopts = -n 0 --cov-config=setup.cfg --cov --cov-report=
 testpaths = tests
 ; Add vendor and patched in addition to the default list of ignored dirs
 norecursedirs = .* build dist CVS _darcs {arch} *.egg vendor patched news tasks docs tests/test_artifacts
@@ -40,7 +40,7 @@ filterwarnings =
     ignore::PendingDeprecationWarning
 
 [coverage:run]
-branch = 1
+branch = True
 omit =
     */test_*.py
 source = pipenv
