--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -22,8 +22,10 @@ codacy-coverage==1.3.11
 codecov==2.0.15
 colorama==0.4.1
 coverage==5.0a4
+coveralls==1.5.1
 cursor==1.2.0
 distlib==0.2.8
+docopt==0.6.2
 docutils==0.14
 execnet==1.5.0
 first==2.0.1
