--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,81 +2,81 @@
 -e ./tests/pytest-pypi
 -e .[dev,tests]
 alabaster==0.7.12
-apipkg==1.5 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+apipkg==1.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 appdirs==1.4.3
 arpeggio==1.9.0
 atomicwrites==1.3.0
-attrs==19.1.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-babel==2.7.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+attrs==19.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+babel==2.7.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 beautifulsoup4==4.7.1
-black==19.3b0 ; python_version >= '3.6'
-bleach==3.1.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+black==19.3b0; python_version >= '3.6'
+bleach==3.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 bs4==0.0.1
-certifi==2019.3.9
+certifi==2019.6.16
 chardet==3.0.4
 click==7.0
 codacy-coverage==1.3.11
 codecov==2.0.15
-coverage==5.0a5 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3' and python_version < '4'
-coveralls==1.7.0
+coverage==4.5.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3' and python_version < '4'
+coveralls==1.8.1
 docopt==0.6.2
 docutils==0.14
-entrypoints==0.3 ; python_version >= '2.7'
-execnet==1.6.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-flake8==3.7.7 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-flaky==3.5.3
-flask==1.0.3
+entrypoints==0.3; python_version >= '2.7'
+execnet==1.6.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+flake8==3.7.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+flaky==3.6.0
+flask==1.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 git+https://github.com/sarugaku/passa.git@a2ba0b30c86339cae5ef3a03046fc9c583452c40#egg=passa
 idna==2.8
-imagesize==1.1.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-importlib-metadata==0.15 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+imagesize==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+importlib-metadata==0.18; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 incremental==17.5.0
 invoke==1.2.0
-isort==4.3.20
-itsdangerous==1.1.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-jedi==0.13.3
+isort==4.3.21
+itsdangerous==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+jedi==0.14.1
 jinja2==2.10.1
-markupsafe==1.1.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+markupsafe==1.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 mccabe==0.6.1
-mock==3.0.5 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-more-itertools==7.0.0 ; python_version > '2.7'
-packaging==19.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-parso==0.4.0
-parver==0.2.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pbr==5.2.0
+mock==3.0.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+more-itertools==7.1.0; python_version > '2.7'
+packaging==19.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+parso==0.5.1
+parver==0.2.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pbr==5.4.0
 pkginfo==1.5.0.1
-pluggy==0.12.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-py==1.8.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pycodestyle==2.5.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pyflakes==2.1.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pygments==2.4.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pyparsing==2.4.0 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pluggy==0.12.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+py==1.8.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pycodestyle==2.5.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyflakes==2.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pygments==2.4.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyparsing==2.4.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytest-cov==2.7.1
 pytest-forked==1.0.2
 pytest-tap==2.3
-pytest-xdist==1.28.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pytest==4.5.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pytest-xdist==1.29.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pytest==4.6.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2019.1
 readme-renderer==24.0
 requests-toolbelt==0.9.1
-requests==2.22.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+requests==2.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 rope==0.14.0
-six==1.12.0 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-snowballstemmer==1.2.1
-soupsieve==1.9.1
-sphinx-click==2.1.0
-sphinx==1.8.5 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sphinxcontrib-websupport==1.1.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-stdeb==0.8.5 ; sys_platform == 'linux'
+six==1.12.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+snowballstemmer==1.9.0
+soupsieve==1.9.2
+sphinx-click==2.2.0
+sphinx==1.8.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+sphinxcontrib-websupport==1.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+stdeb==0.8.5; sys_platform == 'linux'
 tap.py==2.5
 toml==0.10.0
 towncrier==19.2.0
-tqdm==4.32.1 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-twine==1.13.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-urllib3==1.25.3 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3' and python_version < '4'
-virtualenv-clone==0.5.3 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-virtualenv==16.6.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+tqdm==4.32.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+twine==1.13.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+urllib3==1.25.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3' and python_version < '4'
+virtualenv-clone==0.5.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+virtualenv==16.6.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 wcwidth==0.1.7
 webencodings==0.5.1
-werkzeug==0.15.4 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-zipp==0.5.1 ; python_version >= '2.7'
+werkzeug==0.15.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+zipp==0.5.2; python_version >= '2.7'
